//
// Copyright 2019 Wireline, Inc.
//

syntax = "proto3";
package dxos.auth;

import "google/protobuf/any.proto";

message Auth {
  bytes peerId = 1;
  bytes party = 2;
  bytes nonce = 3;
  double created = 4; // TODO(telackey): This is wrong, we should use Timestamp ASAP: https://github.com/protobufjs/protobuf.js/pull/1258
}
