syntax = "proto3";

message Party {
  required string name = 1;
  required bytes key = 2;
  required string rules = 3;
  bytes metadata = 4;
}

message Feed {
  required string name = 1;
  required bytes key = 2;
  bytes secretKey = 3;
  bool load = 4;
  bool persist = 5;
  string valueEncoding = 6;
  bytes metadata = 7;
}

message IntroduceFeeds {
  required string id = 1;
  bool return = 2;
  repeated bytes keys = 3;
}

message EphemeralMessage {
  required string id = 1;
  required string subject = 2;
  required bytes data = 3;
}
